--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,4 +1,4 @@
-/* General styles */
+/******************************** Common styles ********************************/
 body {
 	padding-top: 50px;
 }
@@ -16,7 +16,7 @@ body {
 	text-align: center;
 }
 
-/* Datatables */
+/******************************** Datatables ********************************/
 
 /*div.dataTables_info {
 	white-space: normal !important;
@@ -46,8 +46,47 @@ body.modal-open {
 	padding-right: inherit !important;
 }
 
-
-/*List Problem*/
-.remove_icon{
+/********************************List Problem********************************/
+.remove_icon {
 	font-size: 24px;
+}
+
+/********************************Create Problem********************************/
+.error {
+	color: red;
+}
+
+.alert_eq {
+	padding: 6px 18px;
+	margin-bottom: 3px;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	float: left;
+	max-width: 32%;
+}
+
+.body_width_eq {
+	max-width: 900px;
+}
+
+.row {
+	margin-right: 0px !important;
+}
+
+.subrow {
+	margin-left: 3%;
+	margin-right: -3%;
+	margin-bottom: 12px;
+}
+
+.panel-heading {
+	margin-bottom: 5px;
+}
+
+.font_checkbox_eq {
+	font-weight: 700;
+}
+
+.margin_chexkbox_eq {
+	margin: 0px !important;
 }
