Changed listanswers default order Moved tags to include jsp One style must be in createproblem jsp

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -69,10 +69,6 @@ body.modal-open {
 	max-width: 900px;
 }
 
-.row {
-	margin-right: 0px !important;
-}
-
 .subrow {
 	margin-left: 3%;
 	margin-right: -3%;
@@ -89,4 +85,58 @@ body.modal-open {
 
 .margin_chexkbox_eq {
 	margin: 0px !important;
+}
+
+/********************************Student Solve Problem********************************/
+.dropdown-margin {
+	margin-bottom: 15px;
+}
+
+.formula-input {
+	width: 33% !important;
+	margin-left: 5%;
+	margin-bottom: 1%;
+}
+
+.formula-buttons {
+	text-align: right;
+	margin-bottom: 5px;
+}
+
+.form-control-math {
+	color: #555;
+	width: 50px;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow
+		ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out
+		.15s;
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.form-control-math:focus {
+	border-color: #66afe9;
+	outline: 0;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px
+		rgba(102, 175, 233, .6);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px
+		rgba(102, 175, 233, .6);
+}
+
+.form-control-math::-moz-placeholder {
+	color: #999;
+	opacity: 1;
+}
+
+.form-control-math:-ms-input-placeholder {
+	color: #999;
+}
+
+.form-control-math::-webkit-input-placeholder {
+	color: #999;
 }
