--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -88,17 +88,17 @@ body.modal-open {
 }
 
 /********************************Student Solve Problem********************************/
-.dropdown-margin {
+.dropdownmargin {
 	margin-bottom: 15px;
 }
 
-.formula-input {
+.formulainput {
 	width: 33% !important;
 	margin-left: 5%;
 	margin-bottom: 1%;
 }
 
-.formula-buttons {
+.formulabuttons {
 	text-align: right;
 	margin-bottom: 5px;
 }
